--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.1.1",
+    "babelify": "^7.2.0",
     "browser-sync": "^2.10.0",
+    "browserify": "^12.0.1",
     "gulp": "^3.7.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-postcss": "^6.0.1",
     "gulp-stylus": "^2.1.0",
     "gulp-watch": "^0.6.5",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^3.0.3",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.1"
   },
   "engines": {
     "node": ">=0.10.22",
