--- a/package.json
+++ b/package.json
@@ -4,30 +4,44 @@
   "private": true,
   "dependencies": {
     "async": "^1.4.2",
-    "autoprefixer": "^6.1.1",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.10.0",
-    "browserify": "^12.0.1",
+    "autoprefixer-core": "^5.2.1",
+    "browserify": "^11.0.0",
+    "del": "^1.2.0",
     "dotenv": "^1.1.0",
-    "gulp": "^3.7.0",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-postcss": "^6.0.1",
-    "gulp-stylus": "^2.1.0",
+    "event-stream": "^3.3.1",
+    "glob": "^5.0.14",
+    "gulp": "^3.9.0",
+    "gulp-changed": "^1.2.1",
+    "gulp-combine-mq": "^0.4.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-env": "^0.2.0",
+    "gulp-eslint": "^0.15.0",
+    "gulp-flatten": "^0.1.0",
+    "gulp-live-server": "0.0.23",
+    "gulp-livereload": "^3.8.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^5.1.10",
+    "gulp-rename": "^1.2.2",
+    "gulp-stylus": "^2.0.5",
+    "gulp-uglify": "^1.2.0",
     "gulp-watch": "^0.6.5",
-    "keystone": "^0.3.14",
+    "keystone": "^0.3.13",
     "normalize.css": "^3.0.3",
-    "underscore": "^1.8.3",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.1"
+    "run-sequence": "^1.1.2",
+    "underscore": "^1.8.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^1.9.0"
   },
   "engines": {
-    "node": ">=0.10.22",
-    "npm": ">=1.3.14"
+    "node": ">=4"
   },
   "scripts": {
-    "start": "node keystone.js",
-    "serve": "gulp",
-    "postinstall": "gulp build"
+    "start": "gulp server",
+    "build": "gulp build && gulp minify",
+    "postinstall": "npm run build"
   },
-  "main": "keystone.js"
+  "main": "index.js"
 }
