--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "async": "^1.4.2",
     "autoprefixer-core": "^5.2.1",
     "browserify": "^11.0.0",
+    "bson": "^1.0.4",
     "del": "^1.2.0",
     "dotenv": "^1.1.0",
     "event-stream": "^3.3.1",
