--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-watch": "^0.6.5",
     "keystone": "^0.3.13",
     "mongoose": "~3.8.23",
+    "node-gyp": "^3.6.2",
     "normalize.css": "^3.0.3",
     "run-sequence": "^1.1.2",
     "underscore": "^1.8.0",
