--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-watch": "^0.6.5",
     "keystone": "^0.3.13",
-    "mongoose": "~3.8.23",
-    "node-gyp": "^3.6.2",
     "normalize.css": "^3.0.3",
-    "run-sequence": "^1.1.2",
     "underscore": "^1.8.0",
     "vinyl-source-stream": "^1.1.0"
   },
@@ -39,7 +36,8 @@
     "eslint": "^1.9.0"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=0.10.22",
+    "npm": ">=1.3.14"
   },
   "scripts": {
     "start": "gulp server",
