--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "eslint": "^1.9.0"
   },
   "engines": {
-    "node": ">=0.10.22",
-    "npm": ">=1.3.14"
+    "node": "0.10.22",
+    "npm": "1.3.14"
   },
   "scripts": {
     "start": "gulp server",
     "build": "gulp build && gulp minify",
+    "preinstall": "node -v && npm -v",
     "postinstall": "npm run build"
   },
   "main": "index.js"
